--- a/pom.xml
+++ b/pom.xml
@@ -71,10 +71,10 @@
                     </filters>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>Launcher</mainClass>
+                            <mainClass>WorldDiff</mainClass>
                         </transformer>
                     </transformers>
-                    <finalName>world-downloader</finalName>
+                    <finalName>world-differ</finalName>
                 </configuration>
                 <executions>
                     <execution>
